Changing font back to Courier (issues loading on iOS)

--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ Author: Brian Liebe
 /* Body */
 
 body {
-    font-family: "Consolas";
+    font-family: "Courier New";
     color: white;
 }
 
